--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "downdownup",
   "version": "0.0.0",
+  "homepage": "https://github.com/nguernse/downdownup",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.2.37"
@@ -21,6 +23,7 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
+    "gh-pages": "^6.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "typescript": "~4.7.4",
